Separate rewrite and rewriteEq